<resources>
    <string name="app_name">DataCenterSupervision</string>

    <string name="action_settings">Settings</string>

    <!-- label manifest -->
    <string name="menu_preferences">Préférences</string>
    <string name="label_statsTempActivity">Température de la baie</string>
    <string name="label_statsMPActivity">Usage des processeurs</string>
    <string name="label_statsDDActivity">Pourcentage d\'utilisation des processeurs</string>

    <!-- vue de préférences 1 -->
    <string name="pref_cat_serveursql">PARAMÈTRES DU SERVEUR BDD</string>
    <string name="title_ipServeur">Serveur SQL Express</string>
    <string name="summary_ipServeur">Entrer l\'adresse ou le nom d\'hôte</string>
    <string name="title_portServeur">Serveur SQL Express</string>
    <string name="summary_portServeur">Entrer le port d\'écoute du serveur</string>
    <string name="title_user">Nom d\'utilisateur</string>
    <string name="summary_user">Entrer le nom du compte autorisé</string>
    <string name="title_password">Mot de passe</string>
    <string name="summary_password">Entrer le mot de passe de connexion</string>

    <!-- vue de préférences 2 -->
    <string name="pref_cat_serveursnmp">PARAMÈTRES DU SERVEUR SNMP</string>
    <string name="title_ipAgentV1">Agent SNMP V1</string>
    <string name="summary_ipAgentV1">Entrer l\'adresse ou le nom d\'hôte</string>
    <string name="title_portAgentV1">Agent SNMP v1</string>
    <string name="summary_portAgentV1">Entrer le port d\'écoute du serveur</string>
    <string name="title_communauteDisc">Communauté SNMP en lecture</string>
    <string name="summary_communauteDisc">Entrer le communauté SNMP en lecture</string>

    <!-- vue de préférences 3 -->
    <string name="pref_cat_serveursonde">PARAMÈTRES DE LA SONDE TEMPERATURE SNMP</string>
    <string name="title_ipAgentV1_s">Agent SNMP V1</string>
    <string name="summary_ipAgentV1_s">Entrer l\'adresse ou le nom d\'hôte</string>
    <string name="title_portAgentV1_s">Agent SNMP v1</string>
    <string name="summary_portAgentV1_s">Entrer le port d\'écoute du serveur</string>
    <string name="title_communauteSonde">Communauté SNMP en lecture</string>
    <string name="summary_communauteSonde">Entrer le communauté SNMP en lecture</string>

    <string name="ddStatsText">Statistiques Disque dur</string>
    <string name="graphDDBtn">Graphe usage Disque dur</string>

    <string name="procStatsText">Statistiques des processeurs</string>
    <string name="graphProcBtn">Graphe usage processeurs</string>

    <string name="tempStatsText">Statistiques de la température</string>
    <string name="graphTempBtn">Graphe des températures</string>

    <string name="mainTitle">Supervision du Data Center</string>
    <string name="discUseBtn">Usage disque</string>
    <string name="discStatsBtn">Statistiques disque</string>
    <string name="procUseBtn">Usage processeur</string>
    <string name="procStatsBtn">Statistique processeur</string>
    <string name="baieTempBtn">Température baie</string>
    <string name="tempStatsBtn">Statistique température baie</string>
    <string name="ddUseView">Utilisation DD :</string>
    <string name="procUseView">Utilisation processeur :</string>
    <string name="tempView">Température de la baie :</string>







</resources>
