<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_cat_serveursql">
        <EditTextPreference
            android:key="PREFKEY_IPSERVEUR"
            android:title="@string/title_ipServeur"
            android:summary="@string/summary_ipServeur"
            android:defaultValue="serveurpush.michel-marie.net"
            />
        <EditTextPreference
            android:key="PREFKEY_PORTSERVEUR"
            android:title="@string/title_portServeur"
            android:summary="@string/summary_portServeur"
            android:defaultValue="1433"
            />
        <EditTextPreference
            android:key="PREFKEY_USERNAME"
            android:title="@string/title_user"
            android:summary="@string/summary_user"
            android:defaultValue="manager"
            />
        <EditTextPreference
            android:key="PREFKEY_PASSWORD"
            android:title="@string/title_password"
            android:summary="@string/summary_password"
            android:defaultValue="Password1234"
            android:password="true"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_serveursnmp">
        <EditTextPreference
            android:key="PREFKEY_IPAGENTV1"
            android:title="@string/title_ipAgentV1"
            android:summary="@string/summary_ipAgentV1"
            android:defaultValue="serveurpush.michel-marie.net"
            />
        <EditTextPreference
            android:key="PREFKEY_PORTAGENTV1"
            android:title="@string/title_portAgentV1"
            android:summary="@string/summary_portAgentV1"
            android:defaultValue="1433"
            />
        <EditTextPreference
            android:key="PREFKEY_COMMUNAUTEDISC"
            android:title="@string/title_communauteDisc"
            android:summary="@string/summary_communauteDisc"
            android:defaultValue="Password1234"
            android:password="true"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_serveursonde">
        <EditTextPreference
            android:key="PREFKEY_IPAGENTV1_S"
            android:title="@string/title_ipAgentV1_s"
            android:summary="@string/summary_ipAgentV1_s"
            android:defaultValue="serveurpush.michel-marie.net"
            />
        <EditTextPreference
            android:key="PREFKEY_PORTAGENTV1_S"
            android:title="@string/title_portAgentV1_s"
            android:summary="@string/summary_portAgentV1_s"
            android:defaultValue="1433"
            />
        <EditTextPreference
            android:key="PREFKEY_COMMUNAUTESONDE"
            android:title="@string/title_communauteSonde"
            android:summary="@string/summary_communauteSonde"
            android:defaultValue="Password1234"
            android:password="true"
            />
    </PreferenceCategory>
</PreferenceScreen>